# druzhba-simulator

./: .gitignore  Cargo.toml  README.md  appveyor.yml  build.rs  build_dgen.sh  druzhbaRun.sh  druzhba_run.py  execute_simulator.py  holes_test.txt  optimized_1.rs  out.txt  running_new_experiments  stateful_fw.rs  test_out.txt
benches/: benchmarks.rs  spam_detection_unoptimized
dgen/: Cargo.toml  prog_to_run.rs
dgen/src/: .gitignore  alu_generation_utils.rs  alu_parsing_utils.rs  alugrammar.lalrpop  main.rs  rust_code_generator.rs  test_grammar.rs
hole_configurations/: blue_decrease_equivalent_10_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_1_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_2_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_3_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_4_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_5_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_6_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_7_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_8_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  blue_decrease_equivalent_9_canonicalizer_equivalent_0_sub_stateless_alu_arith_4_2_hole_cfgs.txt  (+135 more)
src/: .gitignore  alu.rs  input_mux.rs  (+8 more)
(+10 files in other folders)
