[package]
name = "dgen"
version = "0.1.0"
authors = ["Aatish Varma", "Jiayang Wang", "Anirudh Sivaraman", "Mike Wong"]
build = "build.rs" #LALRPOP preprocessing


[dependencies]
lalrpop-util = "0.17.1"
regex = "0.2"
rand = "0.3.0"
lazy_static = "1.3.0"

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"

[build-dependencies]
rand = "0.3.0"
num = "0.2.0"
lalrpop = "0.17.1"

